# simple_calculation

./: README.md  computing_motor_torque.cpp
Algorithm/: a  a_star.cpp  a_star.py
Algorithm/example1/: CMakeLists.txt  main.cpp
Arduino/gps_test/: gps_test.ino
Arduino/gps_tested/: gps_tested.ino
CPP/: estimate_current_draw_motor.cpp  firstOpenGlApp  gflag  google_flag.cpp  kinematics.cpp  rad_2_deg.cpp  test
Cmake/projectA/: CMakeLists.txt
Cmake/projectA/src/: libA.cpp  libA.h  main.cpp
Cmake/projectB/: CMakeLists.txt
Cmake/projectB/src/: libB.cpp  libB.h  main.cpp
Docker/: Dockerfile
Docker/webtop/: docker-compose.yml
Lua/: data_type&&var.lua  function.lua  logic.lua  loop.lua  math.lua  table_array.lua  userinput.lua
Python/: computing_motor_torque.py  estimate_current_draw_motor.py  kinematics.py  rad_2_deg.py
Python/GEOGRAPH/: ECEF.py  ECEF2Cartesian  tk.py
Python/kivy/: main.py  test.py  web_gui.kv
QT/hello_world/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
build-helloworld-Desktop-Debug/: Makefile  helloworld  moc_mainwindow.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp  ui_mainwindow.h
cv/: rtsp_test.py
temp/bobo_description/: CMakeLists.txt  package.xml
temp/bobo_description/launch/: mapping.launch.py  nav2.launch.py  remapping.launch.py  test_change_switch.launch.py  test_jumper.py
temp/bobo_description/scripts/: switch_mode.py
